# otus-cpp-08

./: CMakeLists.txt  README.md
src/: bayan.hpp  main.cpp  scan_duplicates.cpp
